--- a/src/app/__layout/layout.less
+++ b/src/app/__layout/layout.less
@@ -175,3 +175,19 @@ nz-header {
     }
   }
 }
+
+.inner-layout {
+  height: 100%;
+  background: #fafafa;
+}
+
+.menu {
+  height: 100%;
+  overflow: hidden auto;
+}
+
+.content {
+  padding: 8px;
+  overflow: hidden auto;
+  background: #f0f2f5;
+}
