feat: 更新表单和表格字段名称，统一为“标识”和“描述”

--- a/src/app/system/access/caps/caps.html
+++ b/src/app/system/access/caps/caps.html
@@ -48,8 +48,8 @@
           [nzIndeterminate]="m.indeterminate()"
           (nzCheckedChange)="m.setCurrentSelections($event)"
         ></th>
-        <th><app-title>能力代码</app-title></th>
-        <th><app-title>能力描述</app-title></th>
+        <th><app-title>标识</app-title></th>
+        <th><app-title>描述</app-title></th>
         <th nzRight="50px" nzAlign="center" nzWidth="100px">
           <app-title>状态</app-title>
         </th>
