--- a/src/app/system/access/caps/form/form.html
+++ b/src/app/system/access/caps/form/form.html
@@ -1,12 +1,12 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>能力代码</nz-form-label>
+    <nz-form-label nzRequired>标识</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.code">
-      <input nz-input formControlName="code" placeholder="请输入能力代码" />
+      <input nz-input formControlName="code" placeholder="请输入能力标识" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired>能力描述</nz-form-label>
+    <nz-form-label nzRequired>描述</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.description">
       <input nz-input formControlName="description" placeholder="请输入能力描述" />
     </nz-form-control>
