--- a/src/app/system/access/caps/caps.html
+++ b/src/app/system/access/caps/caps.html
@@ -5,23 +5,7 @@
   </nz-space>
 </ng-template>
 
-<ng-template #right>
-  <nz-space nzAlign="center">
-    <a nz-dropdown *nzSpaceItem [nzDropdownMenu]="bulkAction" [nzDisabled]="m.selection().size === 0">
-      已选择 {{ m.selection().size }} 个项目
-      <nz-icon nzType="down" />
-    </a>
-    <nz-dropdown-menu #bulkAction>
-      <ul nz-menu nzSelectable>
-        <li nz-menu-item nzDanger (click)="bulkDelete()">删除</li>
-        <li nz-menu-item (click)="m.clearSelections()">取消选择</li>
-      </ul>
-    </nz-dropdown-menu>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="open()">新增</button>
-  </nz-space>
-</ng-template>
-
-<app-box #box [appLeft]="left" [appRight]="right">
+<app-box #box [appLeft]="left">
   <nz-table
     #tb
     [style.height.%]="100"
@@ -40,19 +24,8 @@
   >
     <thead>
       <tr>
-        <th
-          nzLeft
-          nzAlign="center"
-          nzWidth="50px"
-          [nzChecked]="m.checked()"
-          [nzIndeterminate]="m.indeterminate()"
-          (nzCheckedChange)="m.setCurrentSelections($event)"
-        ></th>
         <th><app-title>标识</app-title></th>
         <th><app-title>描述</app-title></th>
-        <th nzRight="50px" nzAlign="center" nzWidth="100px">
-          <app-title>状态</app-title>
-        </th>
         <th nzRight nzAlign="center" nzWidth="50px">
           <button nz-button nzType="text" nz-tooltip="操作">
             <nz-icon nzType="setting" />
@@ -63,28 +36,12 @@
     <tbody>
       @for (data of tb.data; track data.id) {
         <tr>
-          <td
-            nzLeft
-            nzAlign="center"
-            [nzChecked]="m.selection().has(data.id)"
-            (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
-          ></td>
-          <td>{{ data.code }}</td>
+          <td>{{ data.id }}</td>
           <td>{{ data.description }}</td>
           <td nzRight nzAlign="center">
-            <app-active [appValue]="data.active"></app-active>
-          </td>
-          <td nzRight nzAlign="center">
-            <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
-              <nz-icon nzType="ellipsis" nzTheme="outline"></nz-icon>
+            <button nz-button nzType="text" disabled>
+              <nz-icon nzType="ellipsis" />
             </button>
-            <nz-dropdown-menu #actions>
-              <ul nz-menu>
-                <li nz-menu-item (click)="open(data)">修改</li>
-                <li nz-menu-divider></li>
-                <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
-              </ul>
-            </nz-dropdown-menu>
           </td>
         </tr>
       }
