fix: 修正资源链接，更新路由到正确的访问路径

--- a/src/app/system/access/resources/actions/actions.html
+++ b/src/app/system/access/resources/actions/actions.html
@@ -1,7 +1,7 @@
 <ng-template #left>
   <nz-space nzAlign="center">
     @if (resourceData()) {
-      <button *nzSpaceItem nz-button nzType="dashed" [routerLink]="['/system', 'resources', 'home']">
+      <button *nzSpaceItem nz-button nzType="dashed" [routerLink]="['/system', 'access', 'resources']">
         {{ resourceData()?.label }}
         <nz-icon nzType="close" />
       </button>
