feat: 更新导航链接，调整路由配置以支持新的导航结构

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -4,7 +4,7 @@
       <ul class="navigation" nz-menu nzMode="horizontal">
         @for (nav of navs(); track nav.key) {
           <li nz-menu-item nzMatchRouter>
-            <a [routerLink]="[nav.link]">
+            <a [routerLink]="['/', nav.link]">
               <nz-icon [nzType]="nav.icon" />
               {{ nav.name }}
             </a>
