--- a/src/app/system/general/roles/views/views.html
+++ b/src/app/system/general/roles/views/views.html
@@ -7,35 +7,31 @@
   }
 </ng-template>
 
-<ng-template #title>
-  <nz-space nzAlign="center">
-    <b *nzSpaceItem></b>
-  </nz-space>
+<nz-tabs style="height: 100%; padding: 24px 0" nzSize="large" nzTabPosition="left" [nzTabBarExtraContent]="bottom">
+  @for (nav of global.navs; track nav.key) {
+    <ng-template #navTitle>
+      <nz-space nzAlign="center">
+        <span *nzSpaceItem> <nz-icon [nzType]="nav.icon" /> {{ nav.name }}</span>
+      </nz-space>
+    </ng-template>
+    <nz-tab [nzTitle]="navTitle">
+      <nz-switch
+        [nzCheckedChildren]="onRef"
+        [nzUnCheckedChildren]="offRef"
+        [ngModel]="display.has(nav.key)"
+        (ngModelChange)="watchDisplay(nav.key, $event)"
+      >
+      </nz-switch>
+      <nz-tree #nzTreeComponent [nzData]="nodes()" nzCheckable />
+    </nz-tab>
+  }
+</nz-tabs>
+
+<nz-float-button nz-tooltip="更新授权" nzType="primary" nzIcon="save" />
+
+<ng-template #onRef>
+  <nz-icon nzType="eye" />
 </ng-template>
-
-<ng-template #extra> </ng-template>
-
-<nz-row style="height: 100%">
-  <nz-col nzFlex="200px">
-    <nz-tabs style="height: 100%; padding: 24px 0" nzSize="large" nzTabPosition="left" [nzTabBarExtraContent]="bottom">
-      <nz-tab>
-        <a *nzTabLink nz-tab-link> <nz-icon nzType="windows" /> 视图授权 </a>
-      </nz-tab>
-      <nz-tab>
-        <a *nzTabLink nz-tab-link> <nz-icon nzType="code" /> 策略组 </a>
-      </nz-tab>
-    </nz-tabs>
-  </nz-col>
-  <nz-col nzFlex="auto">
-    <nz-page-header>
-      <nz-page-header-title>{{ roleData()?.description | appBlank: '暂无描述' }}</nz-page-header-title>
-      <nz-page-header-extra>
-        <nz-space nzAlign="center">
-          <button *nzSpaceItem nz-button nzType="primary">更新授权</button>
-        </nz-space>
-      </nz-page-header-extra>
-    </nz-page-header>
-
-    <!--    <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="title" [nzExtra]="extra"> </nz-card>-->
-  </nz-col>
-</nz-row>
+<ng-template #offRef>
+  <nz-icon nzType="eye-invisible" />
+</ng-template>
