--- a/src/app/system/access/views/routes/routes.html
+++ b/src/app/system/access/views/routes/routes.html
@@ -1,6 +1,18 @@
-<nz-float-button nz-tooltip="新增分组" nzType="primary" nzIcon="plus" (click)="openGroup()" />
+<ng-template #left>
+  <nz-space nzAlign="center">
+    <nz-input-search *nzSpaceItem [style.width.px]="180">
+      <input nz-input placeholder="关键词" />
+    </nz-input-search>
+  </nz-space>
+</ng-template>
 
-<nz-card style="height: 100%" [nzBordered]="false">
+<ng-template #right>
+  <nz-space nzAlign="center">
+    <button *nzSpaceItem nz-button nzType="primary" (click)="openGroup()"> 新增分组 </button>
+  </nz-space>
+</ng-template>
+
+<nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
   @if (nodes().length === 0) {
     <nz-result style="margin-top: 6%" nzStatus="info" nzTitle="当前导航无任何路由">
       <div nz-result-extra>
