--- a/src/app/system/general/roles/views/views.html
+++ b/src/app/system/general/roles/views/views.html
@@ -1,13 +1,24 @@
-<ng-template #bottom>
-  @if (roleData()) {
-    <button nz-button nzType="dashed" [routerLink]="['/system', 'general', 'roles', 'home']">
-      {{ roleData()!.name }}
-      <nz-icon nzType="close" />
-    </button>
-  }
+<ng-template #left>
+  <nz-space nzAlign="center">
+    @if (roleData()) {
+      <button *nzSpaceItem nz-button nzType="dashed" [routerLink]="['/system', 'general', 'roles', 'home']">
+        {{ roleData()!.name }}
+        <nz-icon nzType="close" />
+      </button>
+    }
+    <nz-input-search *nzSpaceItem [style.width.px]="180">
+      <input nz-input placeholder="关键词" />
+    </nz-input-search>
+  </nz-space>
 </ng-template>
 
-<nz-card style="height: 100%" [nzBordered]="false">
+<ng-template #right>
+  <nz-space nzAlign="center">
+    <button *nzSpaceItem nz-button nzType="primary"> 更新授权 </button>
+  </nz-space>
+</ng-template>
+
+<nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
   <nz-row [nzGutter]="[16, 16]">
     @for (nav of global.navs; track nav.key) {
       <nz-col [nzSpan]="12">
@@ -39,8 +50,6 @@
 <!--&gt;-->
 <!--  <nz-tab nzTitle="视图授权"> </nz-tab>-->
 <!--</nz-tabs>-->
-
-<nz-float-button nz-tooltip="更新授权" nzType="primary" nzIcon="save" />
 
 <ng-template #onRef>
   <nz-icon nzType="eye" />
