feat: 更新登录逻辑，修改成功登录后的重定向路径，翻译版权信息为中文，简化登录组件

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -47,7 +47,7 @@
 
     <small class="copyright">
       <b>© 2026 Litho</b>
-      <span>Open-source infrastructure for modern backend systems</span>
+      <span>面向现代后端系统的开源基础设施</span>
     </small>
   </section>
 </div>
